--- a/src/common/scss/index.scss
+++ b/src/common/scss/index.scss
@@ -1,5 +1,4 @@
 @import "./reset.scss";
 @import "./base.scss";
 @import "./icon.scss";
-@import "./ali-icon.scss";
-@import "./mixin.scss";
+@import "./mixin.scss"
